@@ -36,6 +36,24 @@
     </listitem>
 -->
     <listitem>
+      <para>2014-08-02</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Move sed to be after acl. Fixes
+          <ulink url="&lfs-ticket-root;3646">#3646</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Remove reference to obsolete /proc/ksyms in 
+          modules boot script.  Fixes
+          <ulink url="&lfs-ticket-root;3644">#3644</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Change internal references to svn to an entitiy.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2014-07-27</para>
       <itemizedlist>
         <listitem>
