@@ -59,10 +59,10 @@
 
   <note><para>For experienced users, other partitioning schemes are possible.
   The new LFS system can be on a software <ulink
-  url="&blfs-root;/view/svn/postlfs/raid.html">RAID</ulink> array or an <ulink
-  url="&blfs-root;/view/svn/postlfs/aboutlvm.html">LVM</ulink> logical volume.
+  url="&blfs-root;/view/&short-version;/postlfs/raid.html">RAID</ulink> array or an <ulink
+  url="&blfs-root;/view/&short-version;/postlfs/aboutlvm.html">LVM</ulink> logical volume.
   However, some of these options require an <ulink
-  url="&blfs-root;/view/svn/postlfs/initramfs.html">initramfs</ulink>, which is
+  url="&blfs-root;/view/&short-version;/postlfs/initramfs.html">initramfs</ulink>, which is
   an advanced topic.  These partitioning methodologies are not recommended for
   first time LFS users.</para></note>
 
