@@ -31,7 +31,7 @@
     already have a boot device, you can create one.  In order for the procedure
     below to work, you need to jump ahead to BLFS and install
     <userinput>xorriso</userinput> from the <ulink
-    url="http://www.linuxfromscratch.org/blfs/view/svn/multimedia/libisoburn.html">
+    url="http://www.linuxfromscratch.org/blfs/view/&short-version;/multimedia/libisoburn.html">
     libisoburn</ulink> package.</para>
 
 <screen role="nodump"><userinput>cd /tmp &amp;&amp;
